#3888 fixed spacing of search field and search button

--- a/web/assets/css/header-css.css
+++ b/web/assets/css/header-css.css
@@ -17,7 +17,7 @@ header {
 }
 
 .search-container {
-    margin: 0 8px 0 85px;
+    margin: 0 0 0 85px;
 }
 
 .col-md-80p {
@@ -1046,7 +1046,7 @@ header {
 
 @media (min-width: 991px) {
     .search-container {
-        width: 47%;
+        width: 50%;
     }
     .top-header-right .top-msg-con,
     .sticky-nav-fixed .header-text-container .top-msg-con {
@@ -1057,7 +1057,7 @@ header {
 /* Large desktop */
 @media (min-width: 1200px) {
     .search-container {
-        width: 57%;
+        width: 59%;
     }
 
     .title {
